--- a/1-config-service.yaml
+++ b/1-config-service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: config
 spec:
   type: ClusterIP
   ports:
   - name: http
-    port: 3306
-    targetPort: 3306
+    protocol: TCP
+    port: 8888
+    targetPort: 8888
   selector:
-    app: mysql
+    app: config
