--- a/2-discovery-service.yaml
+++ b/2-discovery-service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: discovery
 spec:
   type: ClusterIP
   ports:
   - name: http
-    port: 3306
-    targetPort: 3306
+    protocol: TCP
+    port: 8761
+    targetPort: 8761
   selector:
-    app: mysql
+    app: discovery
