--- a/3-author-service.yaml
+++ b/3-author-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: author
 spec:
   type: ClusterIP
   ports:
   - name: http
-    port: 3306
-    targetPort: 3306
+    port: 9090
+    targetPort: 9090
   selector:
-    app: mysql
+    app: author
