--- a/4-artstyle-service.yaml
+++ b/4-artstyle-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: artstyle
 spec:
   type: ClusterIP
   ports:
   - name: http
-    port: 3306
-    targetPort: 3306
+    port: 9080
+    targetPort: 9080
   selector:
-    app: mysql
+    app: artstyle
