--- a/5-identity-service.yaml
+++ b/5-identity-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: identity
 spec:
   type: ClusterIP
   ports:
   - name: http
-    port: 3306
-    targetPort: 3306
+    port: 9070
+    targetPort: 9070
   selector:
-    app: mysql
+    app: identity
