--- a/6-art-service.yaml
+++ b/6-art-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: art
 spec:
   type: ClusterIP
   ports:
   - name: http
-    port: 3306
-    targetPort: 3306
+    port: 9060
+    targetPort: 9060
   selector:
-    app: mysql
+    app: art
